--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+@font-face {
+  font-family: Poppins;
+  src: url("./assets/fonts/Poppins-Regular.ttf");
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -41,6 +44,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --font-poppins: "Poppins", sans-serif;
 }
 
 :root {
@@ -118,5 +122,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    /* @apply bg-background text-foreground font-poppins; */
   }
 }
